src/test/deca/context/invalid/test_error_2.5.deca
// Description:
//    Soulève l'erreur (2.5)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Identifier portant le même nom dans la classe 'A' (2.5)
//
// Historique:
//      cree le 19/01/2022


class A {
    int i = 49;
    int i = 3;
}

